--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>optical timer</title>
-    <link rel="stylesheet" href="./index.css" />
+    <link rel="stylesheet" href="./global.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;400;700;900&display=swap"
@@ -16,7 +16,7 @@
     <div class="link-wrapper">
       <a
         download
-        href="https://s3.console.aws.amazon.com/s3/object/optical-timer?region=ap-northeast-2&prefix=optical-timer-darwin-x64-1.0.0.zip"
+        href="https://optical-timer.s3.ap-northeast-2.amazonaws.com/optical-timer-darwin-x64-1.0.0.zip"
         >MacOS 다운로드</a
       >
       <a
