--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="link-wrapper">
       <a
         download
-        href="https://optical-timer.s3.ap-northeast-2.amazonaws.com/optical-timer-darwin-x64-1.0.0.zip"
+        href="https://optical-timer.s3.ap-northeast-2.amazonaws.com/optical-timer.dmg"
         >MacOS 다운로드</a
       >
       <a
