--- a/website/index.html
+++ b/website/index.html
@@ -10,6 +10,8 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;400;700;900&display=swap"
       rel="stylesheet"
     />
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="./favicon.ico" type="image/x-icon" />
   </head>
   <body>
     <h1>Optical Timer</h1>
