--- a/website/index.html
+++ b/website/index.html
@@ -15,6 +15,7 @@
   </head>
   <body>
     <h1>Optical Timer</h1>
+    <p class="sub-title">광학 타이머를 사용하여 작업에 효율성을 추가합니다.</p>
     <div class="link-wrapper">
       <a
         download
