--- a/index.html
+++ b/index.html
@@ -15,17 +15,14 @@
   </head>
   <body>
     <h1>Optical Timer</h1>
+    <p class="sub-title">광학 타이머를 사용하여 작업에 효율성을 추가합니다.</p>
     <div class="link-wrapper">
       <a
         download
         href="https://optical-timer.s3.ap-northeast-2.amazonaws.com/optical-timer.dmg"
         >MacOS 다운로드</a
       >
-      <a
-        download
-        href="https://optical-timer.s3.ap-northeast-2.amazonaws.com/optical-timer-win32-x64.zip"
-        >windows 다운로드</a
-      >
+      <a disabled>windows 다운로드</a>
     </div>
     <canvas id="bg-canvas"></canvas>
     <script>
