--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         href="https://optical-timer.s3.ap-northeast-2.amazonaws.com/optical-timer.dmg"
         >MacOS 다운로드</a
       >
-      <a disabled>windows 다운로드</a>
+      <a download href="https://optical-timer.s3.ap-northeast-2.amazonaws.com/optical-timer-win32-x64.zip">windows 다운로드</a>
     </div>
     <canvas id="bg-canvas"></canvas>
     <script>
